--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "arrow-parens": 0,
     "react/jsx-no-undef": 0,
     "max-len": 0,
-    "react/no-danger": 0
+    "react/no-danger": 0,
+    "jsx-control-statements/jsx-jcs-no-undef": 0
   }
 }
